samples/_failures_safe/1761565324_192941_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e364080.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2e364080.c:155:48: error: expected ‘)’ at end of input
  155 |         add_token(state, TOKEN_UNKNOWN, unknown
      |                  ~                             ^
      |                                                )
./samples/SAFE/__tmp_2e364080.c:155:9: error: expected declaration or statement at end of input
  155 |         add_token(state, TOKEN_UNKNOWN, unknown
      |         ^~~~~~~~~
./samples/SAFE/__tmp_2e364080.c:155:9: error: expected declaration or statement at end of input
